--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "\n",
     "bRedownloadLatest = False # will download feature class from agol, otherwise will use last download\n",
     "bExportFeatureClass = True # export feature class\n",
-    "bClearFlags = False # will clear all flag fields from backup\n"
+    "bClearFlags = True # will clear all flag fields from backup\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
     "    ['FL_HIADJ' , 'Model Adjustment Factor >95% base year', \"((([aadtAdjFactor]/[AADT2019])>0.95) | (([aadtAdjFactor]/[AADT2019])<-0.95))\"],\n",
     "    ['FL_50LT19', 'FHWA-2050 less than 2019'              , \"(([MF2050]+[ADJ2050])<[AADT2019])\"],\n",
     "    ['FL_503X19', 'FHWA-2050 more than three times 2019'  , \"(([MF2050]+[ADJ2050])>(3*([AADT2019]+[ADJ2050])))\"],\n",
-    "    ['FL_FURREV', 'Further Review'                        , \"([NOTES_FURREV]=='')\"]\n",
+    "    ['FL_FURREV', 'Further Review'                        , \"([NOTES_FURREV]!='')\"]\n",
     "], columns=('flagName','flagDescription','flagCriteria'))\n",
     "\n",
     "dfFlags.to_json('_site/data/flags.json', orient='records')"
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to backup\\forecastsegments_backup_20230901_121837.csv\n"
+      "didn't download... will use latest\n"
      ]
     }
    ],
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to backup\\logfile_backup_20230901_121839.csv\n"
+      "Data saved to backup\\logfile_backup_20230901_124009.csv\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "[3722 rows x 15 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
       "_sdfWithLatest['FL_HIADJ'] = (((_sdfWithLatest['aadtAdjFactor']/_sdfWithLatest['AADT2019'])>0.95) | ((_sdfWithLatest['aadtAdjFactor']/_sdfWithLatest['AADT2019'])<-0.95))\n",
       "_sdfWithLatest['FL_50LT19'] = ((_sdfWithLatest['MF2050']+_sdfWithLatest['ADJ2050'])<_sdfWithLatest['AADT2019'])\n",
       "_sdfWithLatest['FL_503X19'] = ((_sdfWithLatest['MF2050']+_sdfWithLatest['ADJ2050'])>(3*(_sdfWithLatest['AADT2019']+_sdfWithLatest['ADJ2050'])))\n",
-      "_sdfWithLatest['FL_FURREV'] = (_sdfWithLatest['NOTES_FURREV']=='')\n"
+      "_sdfWithLatest['FL_FURREV'] = (_sdfWithLatest['NOTES_FURREV']!='')\n"
      ]
     },
     {
@@ -863,7 +863,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -887,7 +887,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -911,7 +911,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -935,7 +935,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -959,7 +959,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1007,7 +1007,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1031,7 +1031,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1055,7 +1055,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1079,7 +1079,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1103,7 +1103,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1139,22 +1139,22 @@
        "8907    0.0     0.0  ...     True        0     False         0      False   \n",
        "\n",
        "     OV_50LT19 FL_503X19  OV_503X19 FL_FURREV  OV_FURREV  \n",
-       "0            0     False          0      True          0  \n",
-       "1            0     False          0      True          0  \n",
-       "2            0     False          0      True          0  \n",
-       "3            0     False          0      True          0  \n",
-       "4            0     False          0      True          0  \n",
+       "0            0     False          0     False          0  \n",
+       "1            0     False          0     False          0  \n",
+       "2            0     False          0     False          0  \n",
+       "3            0     False          0     False          0  \n",
+       "4            0     False          0     False          0  \n",
        "...        ...       ...        ...       ...        ...  \n",
-       "8903         0     False          0      True          0  \n",
-       "8904         0     False          0      True          0  \n",
-       "8905         0     False          0      True          0  \n",
-       "8906         0     False          0      True          0  \n",
-       "8907         0     False          0      True          0  \n",
+       "8903         0     False          0     False          0  \n",
+       "8904         0     False          0     False          0  \n",
+       "8905         0     False          0     False          0  \n",
+       "8906         0     False          0     False          0  \n",
+       "8907         0     False          0     False          0  \n",
        "\n",
        "[8908 rows x 42 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,14 +1230,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEGID</th>\n",
+       "      <th>NOTES_FURREV</th>\n",
+       "      <th>FL_FURREV</th>\n",
+       "      <th>OV_FURREV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0006_000.0</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0006_000.7</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0006_016.0</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0006_046.0</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0006_060.2</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8903</th>\n",
+       "      <td>UTA_7132</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8904</th>\n",
+       "      <td>UTA_7316</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8905</th>\n",
+       "      <td>UTA_7320</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8906</th>\n",
+       "      <td>UTA_7328</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8907</th>\n",
+       "      <td>2322_004.5</td>\n",
+       "      <td></td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8908 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           SEGID NOTES_FURREV  FL_FURREV  OV_FURREV\n",
+       "0     0006_000.0                   False          0\n",
+       "1     0006_000.7                   False          0\n",
+       "2     0006_016.0                   False          0\n",
+       "3     0006_046.0                   False          0\n",
+       "4     0006_060.2                   False          0\n",
+       "...          ...          ...        ...        ...\n",
+       "8903    UTA_7132                   False          0\n",
+       "8904    UTA_7316                   False          0\n",
+       "8905    UTA_7320                   False          0\n",
+       "8906    UTA_7328                   False          0\n",
+       "8907  2322_004.5                   False          0\n",
+       "\n",
+       "[8908 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdfSegmentsWData[['SEGID','NOTES_FURREV','FL_FURREV','OV_FURREV']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature class ForecastSegments_20230901_121948 created in backup\\Forecasts_backup.gdb\n",
+      "Feature class ForecastSegments_20230901_124011 created in backup\\Forecasts_backup.gdb\n",
       "Feature class ForecastSegments created in results\\Forecasts.gdb\n"
      ]
     }
@@ -1282,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1492,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1375,7 +1516,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1399,7 +1540,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1423,7 +1564,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1447,7 +1588,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1495,7 +1636,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1519,7 +1660,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1543,7 +1684,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1567,7 +1708,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1591,7 +1732,7 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1627,22 +1768,22 @@
        "8907    0.0     0.0  ...     True        0     False         0      False   \n",
        "\n",
        "     OV_50LT19 FL_503X19  OV_503X19 FL_FURREV  OV_FURREV  \n",
-       "0            0     False          0      True          0  \n",
-       "1            0     False          0      True          0  \n",
-       "2            0     False          0      True          0  \n",
-       "3            0     False          0      True          0  \n",
-       "4            0     False          0      True          0  \n",
+       "0            0     False          0     False          0  \n",
+       "1            0     False          0     False          0  \n",
+       "2            0     False          0     False          0  \n",
+       "3            0     False          0     False          0  \n",
+       "4            0     False          0     False          0  \n",
        "...        ...       ...        ...       ...        ...  \n",
-       "8903         0     False          0      True          0  \n",
-       "8904         0     False          0      True          0  \n",
-       "8905         0     False          0      True          0  \n",
-       "8906         0     False          0      True          0  \n",
-       "8907         0     False          0      True          0  \n",
+       "8903         0     False          0     False          0  \n",
+       "8904         0     False          0     False          0  \n",
+       "8905         0     False          0     False          0  \n",
+       "8906         0     False          0     False          0  \n",
+       "8907         0     False          0     False          0  \n",
        "\n",
        "[8908 rows x 42 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,13 +1791,6 @@
    "source": [
     "sdfSegmentsWData"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
