Add flag functionality

--- a/3-Prepare-Model-Forecasts.ipynb
+++ b/3-Prepare-Model-Forecasts.ipynb
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1633,6 +1633,7 @@
        "      <th>SEGID</th>\n",
        "      <th>DY_VOL</th>\n",
        "      <th>FT</th>\n",
+       "      <th>ATYPENAME</th>\n",
        "      <th>LANES</th>\n",
        "      <th>YEAR</th>\n",
        "      <th>FAC_WDAVG</th>\n",
@@ -1649,6 +1650,7 @@
        "      <td>0006_146.9</td>\n",
        "      <td>1510.7</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>Rural</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>0.9840</td>\n",
@@ -1663,6 +1665,7 @@
        "      <td>0006_149.9</td>\n",
        "      <td>1559.7</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>Rural</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>0.9840</td>\n",
@@ -1677,6 +1680,7 @@
        "      <td>0006_150.6</td>\n",
        "      <td>1755.8</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>Rural</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>0.9840</td>\n",
@@ -1691,6 +1695,7 @@
        "      <td>0006_152.6</td>\n",
        "      <td>2495.6</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>Rural</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>0.9840</td>\n",
@@ -1705,6 +1710,7 @@
        "      <td>0006_152.9</td>\n",
        "      <td>3725.4</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>Rural</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>0.9593</td>\n",
@@ -1727,12 +1733,14 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3511</th>\n",
        "      <td>3465_000.0</td>\n",
        "      <td>4171.9</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>Transition</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>1.0918</td>\n",
@@ -1747,6 +1755,7 @@
        "      <td>3466_000.0</td>\n",
        "      <td>4558.8</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>Suburban</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>1.0918</td>\n",
@@ -1761,6 +1770,7 @@
        "      <td>3466_000.1</td>\n",
        "      <td>8171.6</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>Transition</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>1.0924</td>\n",
@@ -1775,6 +1785,7 @@
        "      <td>3466_000.3</td>\n",
        "      <td>2138.2</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>Suburban</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>1.0924</td>\n",
@@ -1789,6 +1800,7 @@
        "      <td>3470_000.0</td>\n",
        "      <td>6129.5</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>Suburban</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2019</td>\n",
        "      <td>1.0918</td>\n",
@@ -1800,37 +1812,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3269 rows × 11 columns</p>\n",
+       "<p>3269 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           SEGID  DY_VOL   FT  LANES  YEAR  FAC_WDAVG  modAadt  aadtAdjFactor  \\\n",
-       "0     0006_146.9  1510.7  2.0    2.0  2019     0.9840     1535          -18.0   \n",
-       "1     0006_149.9  1559.7  2.0    2.0  2019     0.9840     1585          856.0   \n",
-       "2     0006_150.6  1755.8  2.0    2.0  2019     0.9840     1784          657.0   \n",
-       "3     0006_152.6  2495.6  3.0    2.0  2019     0.9840     2536         -119.0   \n",
-       "4     0006_152.9  3725.4  2.0    2.0  2019     0.9593     3883         -124.0   \n",
-       "...          ...     ...  ...    ...   ...        ...      ...            ...   \n",
-       "3511  3465_000.0  4171.9  4.0    2.0  2019     1.0918     3821        -3312.0   \n",
-       "3512  3466_000.0  4558.8  4.0    2.0  2019     1.0918     4175         3305.0   \n",
-       "3513  3466_000.1  8171.6  4.0    2.0  2019     1.0924     7480            0.0   \n",
-       "3514  3466_000.3  2138.2  4.0    2.0  2019     1.0924     1957         5523.0   \n",
-       "3515  3470_000.0  6129.5  5.0    2.0  2019     1.0918     5614        -3890.0   \n",
+       "           SEGID  DY_VOL   FT   ATYPENAME  LANES  YEAR  FAC_WDAVG  modAadt  \\\n",
+       "0     0006_146.9  1510.7  2.0       Rural    2.0  2019     0.9840     1535   \n",
+       "1     0006_149.9  1559.7  2.0       Rural    2.0  2019     0.9840     1585   \n",
+       "2     0006_150.6  1755.8  2.0       Rural    2.0  2019     0.9840     1784   \n",
+       "3     0006_152.6  2495.6  3.0       Rural    2.0  2019     0.9840     2536   \n",
+       "4     0006_152.9  3725.4  2.0       Rural    2.0  2019     0.9593     3883   \n",
+       "...          ...     ...  ...         ...    ...   ...        ...      ...   \n",
+       "3511  3465_000.0  4171.9  4.0  Transition    2.0  2019     1.0918     3821   \n",
+       "3512  3466_000.0  4558.8  4.0    Suburban    2.0  2019     1.0918     4175   \n",
+       "3513  3466_000.1  8171.6  4.0  Transition    2.0  2019     1.0924     7480   \n",
+       "3514  3466_000.3  2138.2  4.0    Suburban    2.0  2019     1.0924     1957   \n",
+       "3515  3470_000.0  6129.5  5.0    Suburban    2.0  2019     1.0918     5614   \n",
        "\n",
-       "      modForecast  obsAadt  ModVsObs  \n",
-       "0          1500.0     1517     -17.0  \n",
-       "1          2400.0     2441     -41.0  \n",
-       "2          2400.0     2441     -41.0  \n",
-       "3          2400.0     2417     -17.0  \n",
-       "4          3800.0     3759      41.0  \n",
-       "...           ...      ...       ...  \n",
-       "3511        500.0      509      -9.0  \n",
-       "3512       7500.0     7480      20.0  \n",
-       "3513       7500.0     7480      20.0  \n",
-       "3514       7500.0     7480      20.0  \n",
-       "3515       1700.0     1724     -24.0  \n",
+       "      aadtAdjFactor  modForecast  obsAadt  ModVsObs  \n",
+       "0             -18.0       1500.0     1517     -17.0  \n",
+       "1             856.0       2400.0     2441     -41.0  \n",
+       "2             657.0       2400.0     2441     -41.0  \n",
+       "3            -119.0       2400.0     2417     -17.0  \n",
+       "4            -124.0       3800.0     3759      41.0  \n",
+       "...             ...          ...      ...       ...  \n",
+       "3511        -3312.0        500.0      509      -9.0  \n",
+       "3512         3305.0       7500.0     7480      20.0  \n",
+       "3513            0.0       7500.0     7480      20.0  \n",
+       "3514         5523.0       7500.0     7480      20.0  \n",
+       "3515        -3890.0       1700.0     1724     -24.0  \n",
        "\n",
-       "[3269 rows x 11 columns]"
+       "[3269 rows x 12 columns]"
       ]
      },
      "metadata": {},
@@ -1852,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1862,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1900,112 +1912,112 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>594</th>\n",
-       "      <td>0089_433.3</td>\n",
-       "      <td>17487.9</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>120</th>\n",
+       "      <td>0015_345.0</td>\n",
+       "      <td>82982.9</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>1.0918</td>\n",
-       "      <td>16017</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16000.0</td>\n",
+       "      <td>0.9701</td>\n",
+       "      <td>85540</td>\n",
+       "      <td>-10010.0</td>\n",
+       "      <td>75500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4328</th>\n",
-       "      <td>0089_433.3</td>\n",
-       "      <td>20155.9</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>3854</th>\n",
+       "      <td>0015_345.0</td>\n",
+       "      <td>99482.0</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>2028</td>\n",
-       "      <td>1.0918</td>\n",
-       "      <td>18461</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18500.0</td>\n",
+       "      <td>0.9701</td>\n",
+       "      <td>102548</td>\n",
+       "      <td>-10010.0</td>\n",
+       "      <td>92500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8153</th>\n",
-       "      <td>0089_433.3</td>\n",
-       "      <td>18555.3</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>7679</th>\n",
+       "      <td>0015_345.0</td>\n",
+       "      <td>89741.9</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>2023</td>\n",
-       "      <td>1.0918</td>\n",
-       "      <td>16995</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17000.0</td>\n",
+       "      <td>0.9701</td>\n",
+       "      <td>92507</td>\n",
+       "      <td>-10010.0</td>\n",
+       "      <td>82500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11945</th>\n",
-       "      <td>0089_433.3</td>\n",
-       "      <td>21350.9</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>11471</th>\n",
+       "      <td>0015_345.0</td>\n",
+       "      <td>109755.0</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>2032</td>\n",
-       "      <td>1.0918</td>\n",
-       "      <td>19555</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>19500.0</td>\n",
+       "      <td>0.9701</td>\n",
+       "      <td>113137</td>\n",
+       "      <td>-10010.0</td>\n",
+       "      <td>103000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15815</th>\n",
-       "      <td>0089_433.3</td>\n",
-       "      <td>19802.1</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>15341</th>\n",
+       "      <td>0015_345.0</td>\n",
+       "      <td>123780.1</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>2042</td>\n",
-       "      <td>1.0918</td>\n",
-       "      <td>18137</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18000.0</td>\n",
+       "      <td>0.9701</td>\n",
+       "      <td>127595</td>\n",
+       "      <td>-10010.0</td>\n",
+       "      <td>118000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19720</th>\n",
-       "      <td>0089_433.3</td>\n",
-       "      <td>21116.1</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>19246</th>\n",
+       "      <td>0015_345.0</td>\n",
+       "      <td>133603.3</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>2050</td>\n",
-       "      <td>1.0918</td>\n",
-       "      <td>19340</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>19500.0</td>\n",
+       "      <td>0.9701</td>\n",
+       "      <td>137721</td>\n",
+       "      <td>-10010.0</td>\n",
+       "      <td>128000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            SEGID   DY_VOL   FT ATYPENAME  LANES  YEAR  FAC_WDAVG  modAadt  \\\n",
-       "594    0089_433.3  17487.9  2.0  Suburban    4.0  2019     1.0918    16017   \n",
-       "4328   0089_433.3  20155.9  2.0  Suburban    4.0  2028     1.0918    18461   \n",
-       "8153   0089_433.3  18555.3  2.0  Suburban    4.0  2023     1.0918    16995   \n",
-       "11945  0089_433.3  21350.9  2.0  Suburban    4.0  2032     1.0918    19555   \n",
-       "15815  0089_433.3  19802.1  2.0  Suburban    4.0  2042     1.0918    18137   \n",
-       "19720  0089_433.3  21116.1  2.0  Suburban    4.0  2050     1.0918    19340   \n",
+       "            SEGID    DY_VOL    FT ATYPENAME  LANES  YEAR  FAC_WDAVG  modAadt  \\\n",
+       "120    0015_345.0   82982.9  35.0  Suburban    6.0  2019     0.9701    85540   \n",
+       "3854   0015_345.0   99482.0  35.0  Suburban    6.0  2028     0.9701   102548   \n",
+       "7679   0015_345.0   89741.9  35.0  Suburban    6.0  2023     0.9701    92507   \n",
+       "11471  0015_345.0  109755.0  35.0  Suburban    6.0  2032     0.9701   113137   \n",
+       "15341  0015_345.0  123780.1  23.0  Suburban    6.0  2042     0.9701   127595   \n",
+       "19246  0015_345.0  133603.3  23.0  Suburban    6.0  2050     0.9701   137721   \n",
        "\n",
        "       aadtAdjFactor  modForecast  \n",
-       "594              0.0      16000.0  \n",
-       "4328             0.0      18500.0  \n",
-       "8153             0.0      17000.0  \n",
-       "11945            0.0      19500.0  \n",
-       "15815            0.0      18000.0  \n",
-       "19720            0.0      19500.0  "
+       "120         -10010.0      75500.0  \n",
+       "3854        -10010.0      92500.0  \n",
+       "7679        -10010.0      82500.0  \n",
+       "11471       -10010.0     103000.0  \n",
+       "15341       -10010.0     118000.0  \n",
+       "19246       -10010.0     128000.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfModWithAdj[dfModWithAdj['SEGID']=='0089_433.3']"
+    "dfModWithAdj[dfModWithAdj['SEGID']=='0015_345.0']"
    ]
   },
   {
