Update flag display

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,29 @@
     "\n",
     "bRedownloadLatest = True # will download feature class from agol, otherwise will use last download\n",
     "bExportFeatureClass = True # export feature class\n",
-    "bClearFlags = False # will clear all flag fields from backup\n"
+    "bClearFlags = False # will clear all flag fields from backup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prep flag categories\n",
+    "\n",
+    "# flag name must be short enough to be in dbf column name\n",
+    "dfFlags = pd.DataFrame([\n",
+    "    ['FL_REV'   , 'Not reviewed'                          , \"([NOTES]=='') & ([NOTES_FURREV]=='')\"],\n",
+    "    ['FL_LTPRV' , 'Less than previous forecast year'      , \"(([MF2023]+[ADJ2023])<([M2019]+[aadtAdjFactor])) | (([MF2028]+[ADJ2028])<([MF2023]+[ADJ2023])) | (([MF2032]+[ADJ2032])<([MF2028]+[ADJ2028])) | (([MF2042]+[ADJ2042])<([MF2032]+[ADJ2032])) | (([MF2050]+[ADJ2050])<([MF2042]+[ADJ2042]))\"],\n",
+    "    ['FL_ZERO'  , 'Zero volume'                           , \"(([MF2023]+[ADJ2023])<=0) | (([MF2028]+[ADJ2028])<=0) | (([MF2032]+[ADJ2032])<=0) | (([MF2042]+[ADJ2042])<=0) | (([MF2050]+[ADJ2050])<=0)\"],\n",
+    "    ['FL_HIADJ' , 'Model Adjustment Factor >95% base year', \"((([aadtAdjFactor]/([M2019]+[aadtAdjFactor]))>0.95) | (([aadtAdjFactor]/([M2019]+[aadtAdjFactor]))<-0.95))\"],\n",
+    "    ['FL_50LT19', 'HPMS: 2050 less than 2019'             , \"(([MF2050]+[ADJ2050])<([M2019]+[aadtAdjFactor]))\"],\n",
+    "    ['FL_503X19', 'HPMS: 2050 more than three times 2019' , \"(([MF2050]+[ADJ2050])>(3*([M2019]+[aadtAdjFactor])))\"],\n",
+    "    ['FL_FURREV', 'Further Review'                        , \"([NOTES_FURREV]!='')\"]\n",
+    "], columns=('flagName','flagDescription','flagCriteria'))\n",
+    "\n",
+    "dfFlags.to_json('_site/data/flags.json', orient='records')"
    ]
   },
   {
@@ -47,28 +69,6 @@
     "# USE ALL PLANAREAS since this app will be for entire state\n",
     "# filter by PLANAREA in segments shapefile\n",
     "#filterPlanArea = ['WFRC','MAG'] # must be an array... if only single item, the still include []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prep flag categories\n",
-    "\n",
-    "# flag name must be short enough to be in dbf column name\n",
-    "dfFlags = pd.DataFrame([\n",
-    "    ['FL_REV'   , 'Not reviewed'                          , \"([NOTES]=='') & ([NOTES_FURREV]=='')\"],\n",
-    "    ['FL_LTPRV' , 'Less than previous forecast year'      , \"(([MF2023]+[ADJ2023])<([M2019]+[aadtAdjFactor])) | (([MF2028]+[ADJ2028])<([MF2023]+[ADJ2023])) | (([MF2032]+[ADJ2032])<([MF2028]+[ADJ2028])) | (([MF2042]+[ADJ2042])<([MF2032]+[ADJ2032])) | (([MF2050]+[ADJ2050])<([MF2042]+[ADJ2042]))\"],\n",
-    "    ['FL_ZERO'  , 'Zero volume'                           , \"(([MF2023]+[ADJ2023])<=0) | (([MF2028]+[ADJ2028])<=0) | (([MF2032]+[ADJ2032])<=0) | (([MF2042]+[ADJ2042])<=0) | (([MF2050]+[ADJ2050])<=0)\"],\n",
-    "    ['FL_HIADJ' , 'Model Adjustment Factor >95% base year', \"((([aadtAdjFactor]/([M2019]+[aadtAdjFactor]))>0.95) | (([aadtAdjFactor]/([M2019]+[aadtAdjFactor]))<-0.95))\"],\n",
-    "    ['FL_50LT19', 'HPMS-2050 less than 2019'              , \"(([MF2050]+[ADJ2050])<([M2019]+[aadtAdjFactor]))\"],\n",
-    "    ['FL_503X19', 'HPMS-2050 more than three times 2019'  , \"(([MF2050]+[ADJ2050])>(3*([M2019]+[aadtAdjFactor])))\"],\n",
-    "    ['FL_FURREV', 'Further Review'                        , \"([NOTES_FURREV]!='')\"]\n",
-    "], columns=('flagName','flagDescription','flagCriteria'))\n",
-    "\n",
-    "dfFlags.to_json('_site/data/flags.json', orient='records')"
    ]
   },
   {
@@ -1414,11 +1414,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_temp = sdfSegmentsWData[sdfSegmentsWData['SEGID']=='1388_000.8']"
+    "temp = sdfSegmentsWData[sdfSegmentsWData['SEGID']=='1388_000.8']"
    ]
   }
  ],
